# tanto

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: Compiler.cmake  Dependencies.cmake  GTK.cmake  Qt.cmake  Settings.cmake
cmake/compiler/: GNU.cmake
cmake/sanitizer/: GNU.cmake
examples/: buttons.py
src/: backend.cpp  backend.h  error.h  events.cpp  events.h  tanto.cpp  tanto.h  types.cpp  types.h  utils.h
src/backends/gtk/: backendimpl.cpp  backendimpl.h
src/backends/qt/: backendimpl.cpp  backendimpl.h  mainwindow.cpp  mainwindow.h  picture.cpp  picture.h
